--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -107,6 +107,7 @@
 .site-footer {
   border-top: 1px solid $grey-color-light;
   padding: $spacing-unit 0;
+  background-color: $background-color;
 }
 
 .footer-heading {
