--- a/_sass/timeline.scss
+++ b/_sass/timeline.scss
@@ -1,12 +1,66 @@
 @import "minima";
+// $on-laptop: calc(770px) !default;
+
+@mixin vertical-divider {
+  // https://stackoverflow.com/a/39682926/13989964
+  background: linear-gradient(
+    to right,
+    transparent 0%,
+    transparent calc(50% - 0.5px),
+    $grey-color-light calc(50% - 0.5px),
+    $grey-color-light calc(50% + 0.5px),
+    transparent calc(50% + 0.5px),
+    transparent 100%
+  );
+  @media screen and (max-width: $on-laptop) {
+    border-left: solid 1px $grey-color-light;
+    margin-left: 13px;
+    background: none;
+  }
+}
 
 .timelines-wrapper {
+  max-width: 740px;
+  list-style-type: none;
+  margin: 0 auto;
+  display: block;
+  @include vertical-divider();
+
   .timeline-container {
     background-color: $background-color;
-    border: 1px solid $black-075;
+    border: 1px solid $grey-color-light;
     padding: 24px;
     margin-bottom: 16px;
     border-radius: 4px;
+
+    // dot
+    &::before {
+      content: "";
+      display: inline-block;
+      position: inherit;
+      box-sizing: border-box;
+      border: 2px solid $grey-color;
+      border-radius: 50%;
+      width: 24px;
+      height: 24px;
+      z-index: 1;
+      background-color: $background-color;
+      background-repeat: no-repeat;
+      background-image: url(https://cdn.sstatic.net/Img/developer-story/timeline.svg?v=d0477cf4f5f4), none;
+    }
+
+    &.work::before {
+      background-position: 4.4px -95.5px;
+    }
+
+    &.education::before {
+      background-position: 3px -76px;
+    }
+
+    &.app::before {
+      background-position: 4.4px 7px;
+    }
+
     .timeline-row {
       display: flex;
       .timeline-profile {
@@ -16,25 +70,127 @@
         max-height: 56px;
         margin-right: 16px;
       }
+
       .timeline-body {
+        // eg. Aug 27, 2021 - Aug 27, 2021
         .timeline-date {
           font-size: 12px;
           color: $grey-color;
         }
+
+        // eg. Computer Science
         .timeline-title {
           font-size: 15px;
           font-weight: bold;
           margin: 8px 0 0 0;
         }
+
+        // eg. at BookMeBus
         .timeline-name {
           font-size: 15px;
           color: $grey-color;
-        }
-        .timeline-content {
-          p {
-            font-size: 13px;
+          a {
+            color: $brand-color;
           }
         }
+
+        // eg. 'Markdown content'
+        .timeline-content {
+          font-size: 15px;
+        }
+      }
+    }
+  }
+
+  @mixin float-dot-to-right {
+    margin-right: -67px;
+    float: right;
+  }
+
+  @mixin float-to-left {
+    margin-left: -67px;
+    float: left;
+  }
+
+  @mixin move-dot-to-left {
+    display: block;
+    margin-left: 16px;
+    margin-right: 0;
+    position: absolute;
+    left: 0;
+  }
+
+  @mixin timeline-container-to-left {
+    margin-right: 0px;
+    margin-left: 48px;
+  }
+
+  @mixin arrow-basic-style {
+    content: "";
+    position: relative;
+    width: 0px;
+    height: 0px;
+    margin-top: 5px;
+    border-top: 6px solid transparent;
+    border-bottom: 6px solid transparent;
+  }
+
+  @mixin arrow-to-right {
+    @include arrow-basic-style();
+    margin-right: -33px;
+    border-left: 8px solid $grey-color;
+    border-right: none;
+    float: right;
+  }
+
+  @mixin arrow-to-left {
+    @include arrow-basic-style();
+    margin-left: -33px;
+    border-right: 8px solid $grey-color;
+    border-left: none;
+    float: left;
+  }
+
+  // odd dot: 1, 3, ...
+  li.timeline-container:nth-child(odd) {
+    margin-right: 400px;
+
+    .timeline-arrow::before {
+      @include arrow-to-right();
+      @media screen and (max-width: $on-laptop) {
+        @include arrow-to-left();
+      }
+    }
+
+    @media screen and (max-width: $on-laptop) {
+      @include timeline-container-to-left();
+    }
+
+    // even dot: 2, 4, ...
+    &::before {
+      @include float-dot-to-right();
+      @media screen and (max-width: $on-laptop) {
+        @include move-dot-to-left();
+      }
+    }
+  }
+
+  li.timeline-container:nth-child(even) {
+    margin-left: 400px;
+
+    .timeline-arrow::before {
+      @include arrow-to-left();
+    }
+
+    @media screen and (max-width: $on-laptop) {
+      @include timeline-container-to-left();
+    }
+
+    // even dot: 2, 4, ...
+    &::before {
+      @include float-to-left();
+      @media screen and (max-width: $on-laptop) {
+        @include move-dot-to-left();
       }
     }
   }
