refactor theme to it own file

--- a/_sass/timeline.scss
+++ b/_sass/timeline.scss
@@ -1,5 +1,4 @@
-@import "minima";
-// $on-laptop: calc(770px) !default;
+@import "theme";
 
 @mixin vertical-divider {
   // https://stackoverflow.com/a/39682926/13989964
