add portfolio history

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -2,6 +2,7 @@
 
 // Define defaults for each variable.
 @import "theme";
+@import "commons";
 
 // Use media queries like this:
 // @include media-query($on-palm) {
