add comment section with utteranc.es

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,9 +19,20 @@ layout: default
     {{ content }}
   </div>
 
-  {%- if site.disqus.shortname -%}
+  <!-- {%- if site.disqus.shortname -%}
     {%- include disqus_comments.html -%}
-  {%- endif -%}
+  {%- endif -%} -->
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
+
+{% if page.comments == true %}
+  <script src="https://utteranc.es/client.js"
+          repo="theachoem/theachoem"
+          issue-term="title"
+          theme="github-light"
+          crossorigin="anonymous"
+          async>
+  </script>
+{% endif %}
+
