--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,7 @@ layout: default
           itemprop="name">{{ page.author }}</span></span>
       {%- endif -%}
     </p>
+    {% include share-buttons.html %}
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
