remove inline styles

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,7 +12,6 @@ layout: default
   </div>
 
   {%- if page.pdf -%}
-    <embed src="{{ page.pdf | relative_url }}" type="application/pdf" width=100%
-      style="aspect-ratio:595 / 910" />
+    <embed src="{{ page.pdf | relative_url }}" type="application/pdf" class="cv" />
   {%- endif -%}
 </article>
