--- a/_sass/commons.scss
+++ b/_sass/commons.scss
@@ -57,7 +57,6 @@ hr {
   padding: 0 !important;
 }
 
-
 #markdown-toc {
   border: 1px solid $grey-color-light;
   border-radius: 4px;
@@ -87,4 +86,15 @@ hr {
     margin: 8px 0 0 0;
     display: block;
   }
+}
+
+.dot3 {
+  width: 100%;
+  text-align: center;
+}
+
+.cv {
+  width: 100%;
+  min-height: 800px;
+  aspect-ratio: 595 / 910;
 }
