--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,7 +33,7 @@ layout: default
             date_format}}
           </span>
           <h3 class="timeline-title">{{ timeline.title }}</h2>
-            <p class="timeline-name">at <a href="{{ timeline.website  | absolute_url }}" target="_blank">{{
+            <p class="timeline-name"><a href="{{ timeline.website  | absolute_url }}" target="_blank">{{
                 timeline.name }}</a></p>
             <span class="timeline-content">{{ timeline.content | markdownify }}</span>
         </div>
