improve the toc & dot section in post

--- a/_sass/commons.scss
+++ b/_sass/commons.scss
@@ -17,7 +17,7 @@
   font-weight: normal;
   line-height: 1.15384615;
   text-align: center;
-  text-decoration: none;
+  text-decoration: none !important;
   cursor: pointer;
   user-select: none;
 
@@ -62,10 +62,6 @@ hr {
   border-radius: 4px;
   padding: 16px 32px;
   margin: 0 0 16px 0;
-
-  &::before {
-    content: "Contents:";
-  }
 }
 
 .main-section {
