--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -246,8 +246,10 @@
     }
   }
 
-  a {
-    text-decoration: underline;
-    color: $text-color;
+  p {
+    a {
+      text-decoration: underline;
+      color: $text-color;
+    }
   }
 }
