--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -51,7 +51,7 @@
     right: $spacing-unit / 2;
     background-color: $background-color;
     border: 1px solid $grey-color-light;
-    border-radius: 5px;
+    border-radius: $radius;
     text-align: right;
 
     label[for="nav-trigger"] {
@@ -250,6 +250,11 @@
     a {
       text-decoration: underline;
       color: $text-color;
+    }
+
+    img {
+      border-radius: $radius;
+      box-shadow: $box-shadow;
     }
   }
 }
