--- a/_sass/commons.scss
+++ b/_sass/commons.scss
@@ -27,6 +27,11 @@
   }
 }
 
+
+.mt0 {
+  margin-top: 0px;
+}
+
 .mt {
   margin-top: 8px;
 }
@@ -35,12 +40,32 @@
   margin-top: 16px;
 }
 
+.mt3 {
+  margin-top: 24px;
+}
+
+.mt4 {
+  margin-top: 32px;
+}
+
+.mb0 {
+  margin-bottom: 0px;
+}
+
 .mb {
   margin-bottom: 8px;
 }
 
 .mb2 {
   margin-bottom: 16px;
+}
+
+.mb3 {
+  margin-bottom: 24px;
+}
+
+.mb4 {
+  margin-bottom: 32px;
 }
 
 .topic {
