--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,7 +26,7 @@
       </div>
 
       <div class="footer-col footer-col-3">
-        <p>{{- site.footer_description | escape -}}</p>
+        <p>{{- site.location | escape -}}</p>
       </div>
     </div>
 
