--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: default
 <div class="home">
   <div class="main-section">
     <div>
-      <p>Hi there <img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" width="25px"> I'm a</p>
+      <p>Hi there <img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" width="25px" alt="giphy.gif"> I'm a</p>
       <h1>{{ page.role }}</h1>
       <p>{{ page.summary }}</p>
       <a href="/cv" class="primary-button mt2">View CV</a>
