--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -51,7 +51,14 @@ layout: default
         {% for testimonial in testimonials %}
         <li class="splide__slide">
           <div class="testimonial-sign"></div>
-          <p>{{ forloop.index }} / {{ testimonials.size }}</p>
+          <div class="testimonial-head mb">
+            <p class="testimonial-tags">{{ forloop.index }}/{{ testimonials.size }}</p>
+            <p class="testimonial-tags">{{testimonial.rating}} ★</p>
+            {%- if testimonial.tag -%}
+            <p class="testimonial-tags">{{ testimonial.tags }}</p>
+            {%- endif -%}
+            <p>• {{ testimonial.created_at | date: date_format }}</p>
+          </div>
           <span class="splide-message">{{ testimonial.content | markdownify }}</span>
           <div class="testimonial-author">
             <img src={{ testimonial.profile }} alt="{{ timeline.profile }}" />
