--- a/_sass/testimonial.scss
+++ b/_sass/testimonial.scss
@@ -30,6 +30,40 @@
         text-decoration: none;
       }
     }
+
+    .testimonial-head {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+
+      p {
+        display: inline;
+        margin-left: 4px;
+      }
+
+      .testimonial-tags {
+        border: 1px solid $grey-color-light;
+        border-radius: 24px;
+        padding: 2px 8px;
+        font-size: 11px;
+        margin-right: 1px;
+        margin-left: 1px;
+      }
+
+      @media screen and (max-width: $on-laptop) {
+        display: inline-block;
+        p {
+          margin-top: 8px;
+          display: block !important;
+        }
+        .testimonial-tags {
+          display: inline-block !important;
+          margin-bottom: 4px;
+          margin-top: 0px;
+        }
+      }
+    }
   }
   .splide__arrows {
     display: none !important;
